_sass/acorntheme/_layout.scss
/**
 * Site header
 */
.site-header {
  margin-top: 100px;

  @include media-query($on-palm) {
    margin-top: 40px;
  }
}

.site-title {
  font-size: 2.5em;
  font-weight: 300;
  line-height: 56px;
  margin-bottom: 0;
  float: left;

  &,
  &:visited {
    color: $grey-color-dark;
  }
}

.breadcrumbs > h3 {
  font-weight: 300;
  letter-spacing: 0.02em;
}




/**
 * Site footer
 */
.site-footer {
  padding: $spacing-unit 0;
}

.footer-heading {
  font-size: 18px;
  margin-bottom: $spacing-unit / 2;
}

.contact-list,
.social-media-list {
  list-style: none;
  margin-left: 0;
}

.footer-col-wrapper {
  font-size: 15px;
  color: $grey-color;
  margin-left: -$spacing-unit / 2;
  @extend %clearfix;
}

.footer-col {
  float: left;
  margin-bottom: $spacing-unit / 2;
  padding-left: $spacing-unit / 2;
}

.footer-col-1 {
  width: -webkit-calc(35% - (#{$spacing-unit} / 2));
  width:         calc(35% - (#{$spacing-unit} / 2));
}

.footer-col-2 {
  width: -webkit-calc(20% - (#{$spacing-unit} / 2));
  width:         calc(20% - (#{$spacing-unit} / 2));
}

.footer-col-3 {
  width: -webkit-calc(45% - (#{$spacing-unit} / 2));
  width:         calc(45% - (#{$spacing-unit} / 2));
}

@include media-query($on-laptop) {
  .footer-col-1,
  .footer-col-2 {
    width: -webkit-calc(50% - (#{$spacing-unit} / 2));
    width:         calc(50% - (#{$spacing-unit} / 2));
  }

  .footer-col-3 {
    width: -webkit-calc(100% - (#{$spacing-unit} / 2));
    width:         calc(100% - (#{$spacing-unit} / 2));
  }
}

@include media-query($on-palm) {
  .footer-col {
    float: none;
    width: -webkit-calc(100% - (#{$spacing-unit} / 2));
    width:         calc(100% - (#{$spacing-unit} / 2));
  }
}



/**
 * Page content
 */
.page-content {
  padding: $spacing-unit 0;
}

.page-heading {
  font-size: 20px;
}

.links-list {

  > ul {
    margin-left: 0;
    list-style: none;
    font-size: 1.1em;
    line-height: 2;
  }
}

.images-list {

  > ul {
    margin-left: 0;
    list-style: none;
    font-size: 0.9em;

    > li {
      margin-bottom: 10px;
    }

  }

  > figure {

    > figcaption {
      font-size: 0.7em;
      font-style: italic;
    }
  }

}


/**
 * Photography hub
 */
.gallery-section {
  margin-bottom: $spacing-unit;

  > h4 {
    color: $grey-color;
    margin-bottom: $spacing-unit / 2;
  }
}

.gallery-index {
  margin-left: 0;
  list-style: none;
  font-size: 0.9em;

  > li {
    margin-bottom: $spacing-unit / 2;
  }

  a {
    display: flex;
    align-items: center;
    gap: 15px;

    &:hover .gallery-index-cover {
      opacity: 0.85;
    }
  }
}

.gallery-index-cover {
  width: 180px;
  height: 180px;
  object-fit: contain;
  padding: 4px;
  border: 1px solid $border-color;
  flex-shrink: 0;
  background: $background-color;

  @include media-query($on-palm) {
    width: 110px;
    height: 110px;
  }
}

.gallery-index-text {
  display: flex;
  flex-direction: column;
}

.gallery-index-count {
  font-size: 0.8em;
  font-style: italic;
  color: $grey-color;
}

.gallery-meta {
  font-size: 0.8em;
  font-style: italic;
  color: $grey-color;
}

.gallery-nav {
  display: flex;
  justify-content: space-between;
  gap: 15px;
  margin-top: $spacing-unit / 2;
  font-size: 0.9em;

  .gallery-nav-next {
    margin-left: auto;
  }
}


/**
 * Gallery photo grid
 */
.photo-grid {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  gap: 15px;

  @include media-query($on-palm) {
    grid-template-columns: 1fr;
    gap: 10px;
  }

  a {
    display: block;

    &:hover img {
      opacity: 0.9;
    }

    @media (prefers-reduced-motion: no-preference) {
      img {
        transition: opacity 120ms ease;
      }
    }
  }

  figure {
    margin: 0;
    height: 100%;

    > img {
      display: block;
      width: 100%;
      aspect-ratio: 1;
      object-fit: contain;
    }

    > figcaption {
      font-size: 0.7em;
      font-style: italic;
    }
  }
}


/**
 * Single photo page: break out of the wrapper to 90% of the viewport.
 */
.photo-page {
  width: 90vw;
  margin-left: calc(50% - 45vw);

  > figure > img {
    display: block;
    width: 100%;
  }

  > .gallery-nav {
    font-size: 0.9em;
  }
}


/**
 * Projects
 */
.projects-list {
  margin-left: 0;
  list-style: none;
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  gap: 15px;

  @include media-query($on-palm) {
    grid-template-columns: 1fr;
  }

  > li {
    margin: 0;
    padding: 25px;
    border: 1px solid $border-color;
    display: flex;
    flex-direction: column;

    &:hover {
      border-color: $grey-color;
    }

    @media (prefers-reduced-motion: no-preference) {
      transition: border-color 120ms ease;
    }

    > h4 {
      font-size: 1.6em;
      font-weight: 300;
      margin-bottom: 2px;
    }
  }

  .project-meta {
    font-size: 0.7em;
    text-transform: uppercase;
    letter-spacing: 0.08em;
    color: $grey-color;
    margin-bottom: 10px;
  }

  .project-description {
    font-size: 0.9em;
    margin-bottom: 0;
  }
}


.post-list {
  margin-left: 0;
  list-style: none;

  > li {
    margin-bottom: $spacing-unit;
  }
}

.post-meta {
  font-size: $small-font-size;
  color: $grey-color;
}

.post-link {
  display: block;
  font-size: 24px;
}



/**
 * Posts
 */
.post-header {
  margin-bottom: $spacing-unit;
}

.post-title {
  font-size: 2em;
  font-weight: 300;

  border-bottom: 1px $border-color solid;

  @include media-query($on-laptop) {
    font-size: 36px;
  }
}

.post-content {
  margin-bottom: $spacing-unit;

  h2 {
    font-size: 32px;

    @include media-query($on-laptop) {
      font-size: 28px;
    }
  }

  h3 {
    font-size: 26px;

    @include media-query($on-laptop) {
      font-size: 22px;
    }
  }

  h4 {
    font-size: 20px;

    @include media-query($on-laptop) {
      font-size: 18px;
    }
  }

  > ul {
    font-size: 0.9em;
  }

  > ol {
    font-size: 0.9em;
  }

figure {
    margin-top: 20px;
    margin-bottom: 20px;
    > img {
      width: 100%;
      margin-left: auto;
      margin-right: auto;
    }
    > figcaption {
      font-size: 0.7em;
      font-style: italic;
    }
  }

  

  .image-inline {
    width: 46%;
    padding: 0.5em;
    display: inline-block;
    > img {
      width: 100%;
      margin-left: auto;
      margin-right: auto;
    }
    > figcaption {
      font-size: 0.7em;
      font-style: italic;
    }
  }

  .image-pano {
    width: 94%;
    padding: 0.5em;
    display: inline-block;
    > img {
      width: 100%;
      margin-left: auto;
      margin-right: auto;
    }
    > figcaption {
      font-size: 0.7em;
      font-style: italic;
    }
  }

  .image-small {
    width: 22%;
    padding: 0.5em;
    display: inline-block;
    > img {
      width: 100%;
      margin-left: auto;
      margin-right: auto;
    }
    > figcaption {
      font-size: 0.7em;
      font-style: italic;
    }
  }
}

